--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -25,20 +25,9 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      # npm may resolve the GitHub dep as git+ssh; CI has no SSH keys. Rewrite to HTTPS.
-      # Add repo secret GH_PAT (Personal Access Token with repo scope) if linkedin_notifications is private.
-      - name: Configure Git for GitHub (HTTPS + token when GH_PAT set)
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          if [ -n "$GH_PAT" ]; then
-            git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "git@github.com:"
-            git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "https://github.com/"
-          else
-            git config --global url."https://github.com/".insteadOf "git@github.com:"
-          fi
-
       - name: Install dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm ci
 
       - name: Run LinkedIn job scraper
