--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -6,7 +6,7 @@ on:
       job_url:
         description: 'LinkedIn jobs search URL'
         required: true
-        default: 'https://www.linkedin.com/jobs/search/?f_TPR=r3600&f_WT=2&geoId=92000000&keywords=AI&origin=JOB_SEARCH_PAGE_JOB_FILTER&refresh=true&sortBy=DD'
+        default: 'https://www.linkedin.com/jobs/search/?keywords=AI&location=United%20States'
   schedule:
     # Run hourly at the 40th minute
     - cron: '0 * * * *'
@@ -25,9 +25,20 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
+      # npm may resolve the GitHub dep as git+ssh; CI has no SSH keys. Rewrite to HTTPS.
+      # Add repo secret GH_PAT (Personal Access Token with repo scope) if linkedin_notifications is private.
+      - name: Configure Git for GitHub (HTTPS + token when GH_PAT set)
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          if [ -n "$GH_PAT" ]; then
+            git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "git@github.com:"
+            git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "https://github.com/"
+          else
+            git config --global url."https://github.com/".insteadOf "git@github.com:"
+          fi
+
+      - name: Install dependencies
         run: npm ci
 
       - name: Run LinkedIn job scraper
