--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -29,7 +29,7 @@ jobs:
       # Add repo secret GH_PAT (Personal Access Token with repo scope) if linkedin_notifications is private.
       - name: Configure Git for GitHub (HTTPS + token when GH_PAT set)
         env:
-          GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           if [ -n "$GH_PAT" ]; then
             git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "git@github.com:"
