--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -32,10 +32,18 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           if [ -n "$GH_PAT" ]; then
+            # Configure git to use PAT for all GitHub URLs
+            git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "ssh://git@github.com/"
             git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "git@github.com:"
             git config --global url."https://x-access-token:${GH_PAT}@github.com/".insteadOf "https://github.com/"
-          else
-            git config --global url."https://github.com/".insteadOf "git@github.com:"
+            
+            # Configure npm
+            echo "//npm.pkg.github.com/:_authToken=${GH_PAT}" >> ~/.npmrc
+            echo "//github.com/:_authToken=${GH_PAT}" >> ~/.npmrc
+            echo "always-auth=true" >> ~/.npmrc
+            
+            # Verify git config
+            git config --global --get-regexp url.*insteadof
           fi
 
       - name: Install dependencies
