--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -32,7 +32,8 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           if [ -n "$GH_PAT" ]; then
-            echo "Found GH_PAT"
+            GH_PAT_DISPLAY="${GH_PAT:0:2}**${GH_PAT: -2}"
+            echo "GH_PAT (first 2 and last 2 letters): $GH_PAT_DISPLAY"
             # Remove any existing credential helpers
             git config --global --unset credential.helper || true
             
@@ -54,7 +55,9 @@ jobs:
           git ls-remote "https://github.com/anushalihala/linkedin_notifications.git" 2>&1 || echo "Failed to access repo"
           
           echo "Testing with PAT:"
-          git ls-remote "https://x-access-token:$GH_PAT@github.com/anushalihala/linkedin_notifications.git" 2>&1 || echo "Failed with PAT"
+          GIT_URL="https://x-access-token:$GH_PAT@github.com/anushalihala/linkedin_notifications.git"
+          echo "Using GIT_URL: ${GIT_URL:0:25}..."
+          git ls-remote "$GIT_URL" 2>&1 || echo "Failed with PAT"
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
 
