--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -46,7 +46,14 @@ jobs:
           echo "Using GIT_URL: ${GIT_URL:0:40}..."
           git ls-remote "$GIT_URL" 2>&1 || echo "Failed with PAT"
 
-      - name: Install dependencies
+      - name: Install notifications library
+        run: |
+          env:
+            GH_PAT: ${{ secrets.GH_PAT }}
+          npm install git+https://x-access-token:$GH_PAT@github.com/anushalihala/linkedin_notifications.git
+
+
+      - name: Install other dependencies
         run: npm ci
 
       - name: Run LinkedIn job scraper
