--- a/package.json
+++ b/package.json
@@ -3,5 +3,6 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@anusha/linkedin-notifications": "git+https://github.com/anushalihala/linkedin_notifications.git"
   }
 }
