disable hourly run

--- a/.github/workflows/run-notifications.yml
+++ b/.github/workflows/run-notifications.yml
@@ -8,9 +8,9 @@ on:
         required: true
         default: 'https://www.linkedin.com/jobs/search/?f_TPR=r3600&f_WT=2&geoId=92000000&keywords=AI&origin=JOB_SEARCH_PAGE_JOB_FILTER&refresh=true&sortBy=DD'
 
-  schedule:
+  # schedule:
     # Run hourly at the 0 minute
-    - cron: '0 * * * *'
+    # - cron: '0 * * * *'
 
 jobs:
   fetch-jobs:
